<resources>
    <string name="app_name">KittyCat</string>
    <string name="website">https://github.com/maiktheknife/KittyCat</string>

    <string name="action_toggle">Toggle</string>
    <string name="action_random">Random</string>
    <string name="action_favourites">Favourites</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>

    <string name="transition_cat_image">transition_cat_image</string>
    <string name="transition_cat_id">transition_cat_id</string>
    <string name="transition_fab">transition_fab</string>

    <string name="rate">Rate</string>
    <string name="retry">Retry</string>
    <string name="undo">Undo</string>
    <string name="error">Error</string>
    <string name="error_no_network">No Network available</string>

    <!--AboutView-->
    <string name="aboutLibraries_description_showIcon">true</string>
    <string name="aboutLibraries_description_showVersion">true</string>
    <string name="aboutLibraries_description_text">Kittycat - Android Showcase</string>

    <!--Menu-->
    <string name="pref_cat_laf"><![CDATA[Look & Feel]]></string>
    <string name="pref_cat_loading">Verhalten</string>
    <string name="pref_cat_about">About</string>

    <!--Preferences-->
    <string name="pref_key_laf_theme">theme</string>
    <string name="pref_key_loading_count">loading_count</string>
    <string name="pref_key_about_website">website</string>
    <string name="pref_key_about_version">version</string>
    <string name="pref_key_about_license">license</string>

    <string name="pref_title_laf_theme">Theme</string>
    <string name="pref_title_loading_count">Anzahl Bilder pro Request</string>
    <string name="pref_title_about_website">Visit Website</string>
    <string name="pref_title_about_version">Version</string>
    <string name="pref_title_about_license">Licenses</string>

    <!--Preferences Menu Values-->
    <string name="pref_themes_dark">Dark</string>
    <string name="pref_themes_light">Light</string>
    <string name="pref_themes_auto">Auto</string>
    <string name="pref_themes_system">Follow System</string>

    <string name="pref_themes_dark_value">dark</string>
    <string name="pref_themes_light_value">light</string>
    <string name="pref_themes_auto_value">auto</string>
    <string name="pref_themes_system_value">system</string>

</resources>
