<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_cat_laf">
        <ListPreference
            android:defaultValue="light"
            android:entries="@array/themes"
            android:entryValues="@array/themes_values"
            android:key="@string/pref_key_laf_theme"
            android:title="@string/pref_title_laf_theme" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cat_loading">
        <net.kivitro.kittycat.view.widget.NumberPickerPreference
            android:defaultValue="30"
            android:key="@string/pref_key_loading_count"
            android:title="@string/pref_title_loading_count" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cat_about">
        <Preference
            android:key="@string/pref_key_about_website"
            android:summary="@string/website"
            android:title="@string/pref_title_about_website">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/website" />
        </Preference>
        <Preference
            android:enabled="false"
            android:key="@string/pref_key_about_version"
            android:title="@string/pref_title_about_version" />
        <Preference
            android:key="@string/pref_key_about_license"
            android:title="@string/pref_title_about_license" />
    </PreferenceCategory>

</PreferenceScreen>