<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_random"
        android:enabled="true"
        android:icon="@drawable/cat"
        android:title="@string/action_random"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_favorites"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_black"
        android:title="@string/action_favourites"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"/>
</menu>