<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".view.activity.MainActivity">

    <item
        android:id="@+id/action_toggle"
        android:icon="@mipmap/ic_action_list"
        android:orderInCategory="1"
        android:title="@string/action_toggle"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_favorites"
        android:icon="@drawable/ic_favorite_black"
        android:orderInCategory="2"
        android:title="@string/action_favourites"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>
